# node-taglib2

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  appveyor.yml  build.js  compile.js  index.js  install.sh  package-lock.json  package.json  prebuild.js  t.js
lib/taglib-31f3109/: CMakeLists.txt
src/: taglib2.cc
tests/: index.js
tests/fixtures/: sample-output-png.m4a  sample-output.m4a  sample.aifc  sample.flac  sample.m4a
